test/fail_compilation/fail273.d
//1054 = alias_30_J, alias_30_K. Stack overflow
alias a b;
alias b a;
b x;  // ICE #1
a y; // ICE #2
